[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/level2.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shattered2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fairy2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fairy1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level2.gd" type="Script" id=6]
[ext_resource path="res://bgm/level2.ogg" type="AudioStream" id=7]

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 641, 360 )
b = Vector2( 639, 0 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 66, 339 )
b = Vector2( 302, 339 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 66, 339 )
b = Vector2( 471, 166 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 66, 339 )
b = Vector2( 711, 339 )

[node name="Level2" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Fairy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 595, 36 )

[node name="Fairy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 556, 117 )

[node name="Fairy1" parent="." instance=ExtResource( 5 )]
position = Vector2( 422, 95 )

[node name="Fairy4" parent="." instance=ExtResource( 5 )]
position = Vector2( 459, 201 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 219, 321 )
__meta__ = {
"_edit_group_": true
}

[node name="Shattered2" parent="." instance=ExtResource( 3 )]
position = Vector2( 113, 50 )

[node name="House" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House"]
polygon = PoolVector2Array( 0, 119, 38, 59, 38, -1, -2, 0 )

[node name="Border" type="StaticBody2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="Border"]
shape = SubResource( 2 )

[node name="Down" type="CollisionShape2D" parent="Border"]
position = Vector2( -67, 21 )
shape = SubResource( 4 )

[node name="Down2" type="CollisionShape2D" parent="Border"]
position = Vector2( 169, 21 )
shape = SubResource( 5 )

[node name="Up" type="CollisionShape2D" parent="Border"]
position = Vector2( -70, -338 )
shape = SubResource( 3 )

[node name="Left" type="CollisionShape2D" parent="Border"]
position = Vector2( -640, -1 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="dead" from="Fairy2" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy2" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy3" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy3" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy1" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy1" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy4" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy4" to="." method="_on_Fairy_shoot"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
